feature: create portal components

--- a/public/global.css
+++ b/public/global.css
@@ -11,7 +11,7 @@
 
 :root{
     --bg: #191622;
-    --curent-line: #44475a;
+    --current-line: #44475a;
     --comment: #483C67;
     --purple:#988BC7;
     --yellow: #E7DE79;
