finished: modal with hooks template

--- a/src/components/Modal.module.scss
+++ b/src/components/Modal.module.scss
@@ -3,8 +3,6 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 60vw;
-    height: 40vh;
     background: var(--comment);
     border-radius: 1rem;
     padding: 2.4rem;
@@ -18,10 +16,11 @@
             border: none;
         }
 
-        margin-bottom: 1.6rem;
+        margin-bottom: 1rem;
     }
 
-    > div {
+    .contentContainer{
         margin-bottom: 1.6rem;
+        width: 100%;
     }
 }
